[gd_scene load_steps=5 format=3 uid="uid://beo8dbmvqir2k"]

[ext_resource type="Theme" uid="uid://bbvq4quc60gam" path="res://assets/themes/Default_Theme.tres" id="1_ce3w2"]
[ext_resource type="Script" uid="uid://cqfc6khixvhee" path="res://Scripts/Main Menu.gd" id="2_n45e2"]
[ext_resource type="FontFile" uid="uid://c2ep0aaegexyu" path="res://assets/fonts/Nabana-ShadowBold - DEMO.ttf" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://bj74ihceuxwln" path="res://assets/HiddenPaws Logo.png" id="4_cp0ys"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ce3w2")
script = ExtResource("2_n45e2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -67.0
offset_right = 102.0
offset_bottom = 434.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Start_Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit_Button")
focus_neighbor_bottom = NodePath("../Settings_Button")
focus_next = NodePath("../Settings_Button")
focus_previous = NodePath("../Quit_Button")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_opfnp")
theme_override_font_sizes/font_size = 75
text = "Start"

[node name="Settings_Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Start_Button")
focus_neighbor_bottom = NodePath("../Quit_Button")
focus_next = NodePath("../Quit_Button")
focus_previous = NodePath("../Start_Button")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_opfnp")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Quit_Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Settings_Button")
focus_neighbor_bottom = NodePath("../Start_Button")
focus_next = NodePath("../Start_Button")
focus_previous = NodePath("../Settings_Button")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_opfnp")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 281)
scale = Vector2(0.422056, 0.422056)
texture = ExtResource("4_cp0ys")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
